--- a/bruintour/bruintour.vcxproj.filters
+++ b/bruintour/bruintour.vcxproj.filters
@@ -61,8 +61,9 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <Text Include="stops.txt" />
     <Text Include="mapdata.txt">
-      <Filter>Resource Files</Filter>
+      <Filter>Source Files</Filter>
     </Text>
   </ItemGroup>
 </Project>
